--- a/curs1/ap1.html
+++ b/curs1/ap1.html
@@ -17,6 +17,7 @@
             dataFabricarii:new Date(2022,02,22),
             afiseaza: function(){
                 console.log(`Produsul ${this.nume} costa ${this.pret}`)
+                // console.log("Produsul" + " " + produs.nume + " " + "costa" + " "  + produs.pret);
             },
             cumpara: function(){
                 // incapsulare: fac verificare si apoi modific
