--- a/curs1/ap2.html
+++ b/curs1/ap2.html
@@ -39,7 +39,9 @@
         paine.gramaj='500'; 
         console.log(paine.gramaj);
         // definim un nou produs
-        const apa =produsNou('apa plata', 3, 100, 2022-01-05);
+        const apa = produsNou('apa plata', 3, 100, '2022-01-05');
+        apa.afiseaza();
+        apa.cumpara();
     </script>
 </body>
 </html>
