--- a/curs1/ap3.html
+++ b/curs1/ap3.html
@@ -10,10 +10,11 @@
     <h1>Metoda 3 de a crea obiecte folosind  Constructor function cu new (class din alte limbaje de programare)</h1>
 
     <script>
-        function  produsNou(nume, pret,stoc,dataFabricarii){
+        function  produsNou(nume, pret,stoc,gramaj,dataFabricarii){
             this.nume = nume;
             this.pret = pret;
             this.stoc = stoc;
+            this.gramaj = gramaj;
             this.dataFabricari = dataFabricarii;
             this.afiseaza=function(){
                 console.log(`Produsul ${this.nume} costa ${this.pret}`)
@@ -25,18 +26,21 @@
                 }
             }
         }
-        const paine =  new produsNou('Paine', 8, 36,'2020-02-22');
+        const paine =  new produsNou('Paine', 8, 36,500,'2020-02-22');
         paine.afiseaza();
         paine.cumpara();
         console.log(paine.nume);
         console.log(paine['nume']);
+        console.log(paine.gramaj);
         paine.nume='Paine cu maia'; 
         console.log(paine['nume']);
         // definim o noua proprietate
         paine.gramaj='500'; 
         console.log(paine.gramaj);
         // definim un nou produs
-        const apa = new produsNou('apa plata', 3, 100, 2022-01-05);
+        const apa = new produsNou('apa plata', 3, 100, '2022-01-05');
+        apa.afiseaza();
+        apa.cumpara();
     </script>
 </body>
 </html>
