--- a/curs1/ap2.html
+++ b/curs1/ap2.html
@@ -39,8 +39,7 @@
         paine.gramaj='500'; 
         console.log(paine.gramaj);
         // definim un nou produs
-        const apa = produsNou('apa plata', 3, 100, '2022-01-05');
-        apa.afiseaza();
+        const apa =produsNou('apa plata', 3, 100, 2022-01-05);
         apa.cumpara();
     </script>
 </body>
