--- a/curs1/demo3.html
+++ b/curs1/demo3.html
@@ -2,21 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+   
+    
     <script src="./js/Carte.js"></script>
-<script>
-    const carte1 = new Carte('Poezii', 'Mihai Eminescu', 'Corint', 2005, 243);
-    carte1.afiseazaTitlu();
-    const carte2 = new Carte('Geniu Pustiu', 'Mihai Eminescu', 'All', 2010, 34);
-    carte2.afiseazaTitlu();
-    const carte3 = new Carte('Marile Sperante', 'Charles Dikens', 'Univers', 2002, 45);
-    carte3.afiseazaTitlu();
+    <script>
+        const carte1 = new Carte( 'Mihai Eminescu', 243 );
+        const carte2 = new Carte('Geniu Pustiu','Mihai Eminescu','All',2010, 34);
+        const carte3 = new Carte('Marile speranţe','Charles Dickens','Univers',2002, 45);
+        carte1.afiseazaTitlu();
 
-</script>
-
+    </script>
 </body>
 </html>
