--- a/curs2/ap1.html
+++ b/curs2/ap1.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <base href=".">
 </head>
 <body>
-    
-    <script src="./js/Student2.js"></script>
-    <script>
-        const studentnou = 
-        new StudentNou(3, 'Adi', 32);
-    </script>
+    <h2>JavaScript lucrul cu module</h2>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
