--- a/curs1/ap1.html
+++ b/curs1/ap1.html
@@ -17,7 +17,24 @@
             dataFabricarii:new Date(2022,02,22),
             afiseaza: function(){
                 console.log(`Produsul ${this.nume} costa ${this.pret}`)
-                // console.log("Produsul" + " " + produs.nume + " " + "costa" + " "  + produs.pret);
+            },
+            cumpara: function(){
+                // incapsulare: fac verificare si apoi modific
+                // modific controlat o proprietate
+                if(this.stoc>0){
+                    this.stoc -= 1;
+                    console.log(`Produsul ${this.nume} a fost adaugat in cos`)
+                }
+            }
+
+        }
+        let produs2={
+            nume: 'Apa',
+            pret: 2,
+            stoc: 25,
+            dataFabricarii:new Date(2022,02,22),
+            afiseaza: function(){
+                console.log(`Produsul ${this.nume} costa ${this.pret}`)
             },
             cumpara: function(){
                 // incapsulare: fac verificare si apoi modific
@@ -35,6 +52,9 @@
         console.log(produs['nume']);
         produs.nume='Apa'; // Atentie produsul si-a modificat numele fara verificare.
         console.log(produs['nume']);
+        produs.stoc=3;
+        produs.cumpara();
+
 
     </script>
 </body>
