--- a/curs2/ap8.html
+++ b/curs2/ap8.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="./js/Student2.js"></script>
-    <script>
-        const studentnou = 
-        new StudentNou(3, 'Adi', 32);
-    </script>
+    <script src="./js/ap8.js" type="module"></script>
 </body>
 </html>
