--- a/curs2/demo1.html
+++ b/curs2/demo1.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     
-    <script src="./js/Student2.js"></script>
-    <script>
-        const studentnou = 
-        new StudentNou(3, 'Adi', 32);
-    </script>
+    <script src="./classes/Utilizator.js"></script>
+    <script src=""></script>
 </body>
 </html>
