--- a/curs3/ap7.html
+++ b/curs3/ap7.html
@@ -12,22 +12,24 @@
   constructor(name) {
     this.name = name
   }
-
   sayHi() {
     console.log(`Hi! My name is ${name}`)
   }
 }
-class Developer extends Human () {
+class Developer extends Human {
   sayHi() {
+    
     console.log(`Hi! My name is ${name}. I am a developer.`)
   }
 }
-
-class Designer extends Human () {
+class Designer extends Human {
   sayHi() {
+    super.sayHi();
     console.log(`Hi! My name is ${name}. I am a designer.`)
   }
 }
+
+
 const zell = new Human('Zell')
 const vincy = new Developer('Vincy')
 const tim = new Designer('Tim')
