--- a/curs7/mycrud/frontend/index.html
+++ b/curs7/mycrud/frontend/index.html
@@ -26,24 +26,24 @@
                 <table id="example" class="display" style="width:100%">
                     <thead>
                         <tr>
-                            <th>First name</th>
-                            <th>Last name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
-                            <th>Salary</th>
+                            <th>Nr.</th>
+                            <th>Nume</th>
+                            <th>Prenume</th>
+                            <th>Email</th>
+                            <th>Telefon</th>
+                            <th>Data nastere</th>
+                            <th>Atiuni</th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
-                            <th>First name</th>
-                            <th>Last name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
-                            <th>Salary</th>
+                            <th>Nr.</th>
+                            <th>Nume</th>
+                            <th>Prenume</th>
+                            <th>Email</th>
+                            <th>Telefon</th>
+                            <th>Data nastere</th>
+                            <th>Atiuni</th>
                         </tr>
                     </tfoot>
                 </table>
