--- a/curs1/ap8.html
+++ b/curs1/ap8.html
@@ -23,7 +23,7 @@
 
         }
         StudentNou.prototype.salut = function () {
-            console.log(`Buna ziua, numele meu este: ${this.nume} si am ${this.varsta} ani.`)
+            console.log(`Buna ziua, numele meu este: ${this.nume} si am ${this.varsta} ani.`);
         }
         // Metoda 2
         function Student(id, nume, varsta) {
@@ -31,7 +31,7 @@
             this.nume = nume;
             this.varsta = varsta;
             Student.salut = function () {
-                console.log(`Buna ziua, numele meu este: ${this.nume} si am ${this.varsta} ani.`)
+                console.log(`Buna ziua, numele meu este: ${this.nume} si am ${this.varsta} ani.`);
             }
 
 
