--- a/curs7/mycrud/frontend/index.html
+++ b/curs7/mycrud/frontend/index.html
@@ -32,7 +32,7 @@
                             <th>Email</th>
                             <th>Telefon</th>
                             <th>Data nastere</th>
-                            <th>Atiuni</th>
+                            <th>Actiuni</th>
                         </tr>
                     </thead>
                     <tfoot>
@@ -43,7 +43,7 @@
                             <th>Email</th>
                             <th>Telefon</th>
                             <th>Data nastere</th>
-                            <th>Atiuni</th>
+                            <th>Actiuni</th>
                         </tr>
                     </tfoot>
                 </table>
